<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_product"
                android:icon="@drawable/ic_add_product"
                android:title="@string/add_product"/>
        <item
                android:id="@+id/nav_order"
                android:icon="@drawable/ic_shopping_cart"
                android:title="@string/menu_order"/>

        <item
                android:id="@+id/nav_order_list"
                android:icon="@drawable/ic_list"
                android:title="@string/order_list"/>

        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_account_circle"
                android:title="@string/menu_profile"/>
        <item
                android:id="@+id/nav_report"
                android:icon="@drawable/ic_report"
                android:title="@string/report"/>
        <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_setting"/>
    </group>
</menu>