<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.bataxdev.waterdepot.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_product"
            android:name="com.bataxdev.waterdepot.ui.product.ProductFragment"
            android:label="@string/add_product"
            tools:layout="@layout/product_fragment"/>

    <fragment
            android:id="@+id/nav_order"
            android:name="com.bataxdev.waterdepot.ui.order.OrderFragment"
            android:label="@string/menu_order"
            tools:layout="@layout/fragment_order"/>

    <fragment
            android:id="@+id/nav_order_list"
            android:name="com.bataxdev.waterdepot.ui.order_list.OrderListFragment"
            android:label="@string/order_list"
            tools:layout="@layout/order_list_fragment"/>

    <fragment
            android:id="@+id/nav_profile"
            android:name="com.bataxdev.waterdepot.ui.profile.ProfileFragment"
            android:label="@string/menu_profile"
            tools:layout="@layout/fragment_profile"/>

    <fragment
            android:id="@+id/nav_report"
            android:name="com.bataxdev.waterdepot.ui.report.ReportFragment"
            android:label="@string/report"/>

    <fragment
            android:id="@+id/nav_user"
            android:name="com.bataxdev.waterdepot.ui.user.UserFragment"
            android:label="@string/user"/>

    <fragment
            android:id="@+id/nav_setting"
            android:name="com.bataxdev.waterdepot.ui.setting.SettingsFragment"
            android:label="@string/menu_setting"/>
</navigation>